Switch to alpine linux

--- a/docker/app/Dockerfile
+++ b/docker/app/Dockerfile
@@ -1,9 +1,8 @@
-FROM php:8.3-fpm-bookworm
+FROM php:8.3-fpm-alpine
 
 LABEL maintainer="Samuel Weirich"
 LABEL description="Development container for PILOS, compatible with laravel sail; heavily inspired by offical image"
 
-ARG NODE_VERSION=18
 ARG WWWGROUP=33
 ARG WWWUSER=33
 
@@ -14,26 +13,25 @@ ENV TZ=UTC
 
 RUN ln -snf /usr/share/zoneinfo/$TZ /etc/localtime && echo $TZ > /etc/timezone
 
-RUN apt-get update \
-    && mkdir -p /etc/apt/keyrings \
-    && apt-get install -y gnupg gosu curl ca-certificates zip unzip pv libzip-dev git supervisor libcap2-bin libpng-dev \
-    && apt-get install -y nginx \
-    && apt-get install -y default-mysql-client postgresql-client libpq-dev \
-    && apt-get install -y libldap2-dev libxml2-dev libpq-dev \
-    && apt-get install -y build-essential libcairo2-dev libpango1.0-dev libjpeg-dev libgif-dev librsvg2-dev  \
-    && docker-php-ext-configure gd --with-freetype=/usr/include/ --with-jpeg=/usr/include/ \
+RUN apk --no-cache add \
+    shadow \
+    bash su-exec \
+    pv \
+    supervisor \
+    nginx \
+    mysql-client postgresql-client postgresql-dev openldap-dev \
+    libzip-dev libxml2-dev \
+    nodejs npm \
+    composer \
     && docker-php-ext-configure pgsql -with-pgsql=/usr/local/pgsql \
-    && docker-php-ext-install -j$(nproc) bcmath pdo_mysql pdo_pgsql pgsql ldap zip gd opcache soap \
-    && pecl install xdebug-3.3.0 \
-    && php -r "readfile('https://getcomposer.org/installer');" | php -- --install-dir=/usr/bin/ --filename=composer \
-    && curl -fsSL https://deb.nodesource.com/gpgkey/nodesource-repo.gpg.key | gpg --dearmor -o /etc/apt/keyrings/nodesource.gpg \
-    && echo "deb [signed-by=/etc/apt/keyrings/nodesource.gpg] https://deb.nodesource.com/node_$NODE_VERSION.x nodistro main" > /etc/apt/sources.list.d/nodesource.list \
-    && apt-get update \
-    && apt-get install -y nodejs npm \
-    && npm install -g npm \
-    && apt-get -y autoremove \
-    && apt-get clean \
-    && rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/*
+    && docker-php-ext-install -j$(nproc) bcmath pdo_mysql pdo_pgsql pgsql ldap zip opcache soap \
+    && rm -rf /var/cache/apk/* /tmp/* /var/tmp/*
+
+# Add xdebug
+RUN apk add --no-cache --virtual .build-deps $PHPIZE_DEPS linux-headers \
+    && pecl install xdebug-3.3.1 \
+    && docker-php-ext-enable xdebug \
+    && apk del -f .build-deps
 
 RUN usermod -d /var/www www-data
 RUN chown www-data:www-data /var/www/
@@ -56,19 +54,19 @@ RUN chmod +x /usr/local/etc/frontend/run.sh
 RUN chown www-data:www-data /usr/local/etc/frontend/
 
 # Copy supervisor config
+RUN mkdir -p /var/log/supervisor
 COPY ./docker/app/supervisord/ /etc/supervisor/conf.d
 
 # Enable nginx site
-COPY ./docker/app/nginx/sites-available /etc/nginx/sites-available
+COPY ./docker/app/nginx/sites-enabled /etc/nginx/sites-enabled
 COPY ./docker/app/nginx/nginx.conf /etc/nginx/nginx.conf
 COPY ./docker/app/nginx/snippets-available /etc/nginx/snippets-available
-RUN rm /etc/nginx/sites-enabled/default
-RUN ln -s /etc/nginx/sites-available/default /etc/nginx/sites-enabled/default
+RUN ls -la /etc/nginx/
+RUN mkdir -p /etc/nginx/snippets
 
 # Increase limits
 RUN echo 'www-data soft nofile 65535' >> /etc/security/limits.conf
 RUN echo 'www-data hard nofile 65535' >> /etc/security/limits.conf
-RUN echo 'ULIMIT="-n 65535"' >> /etc/default/nginx
 
 # Copy php config files
 COPY ./docker/app/php/zz-docker.conf /usr/local/etc/php-fpm.d/zz-docker.conf
