Optimize dependencies and docker image

--- a/docker/app/Dockerfile
+++ b/docker/app/Dockerfile
@@ -16,12 +16,11 @@ RUN ln -snf /usr/share/zoneinfo/$TZ /etc/localtime && echo $TZ > /etc/timezone
 
 RUN apt-get update \
     && mkdir -p /etc/apt/keyrings \
-    && apt-get install -y gnupg gosu curl ca-certificates zip unzip pv libzip-dev git supervisor libcap2-bin libpng-dev \
+    && apt-get install -y gnupg gosu curl ca-certificates pv supervisor \
     && apt-get install -y nginx \
-    && apt-get install -y default-mysql-client postgresql-client libpq-dev \
-    && apt-get install -y libldap2-dev libxml2-dev libpq-dev \
-    && apt-get install -y build-essential libcairo2-dev libpango1.0-dev libjpeg-dev libgif-dev librsvg2-dev  \
-    && docker-php-ext-configure gd --with-freetype=/usr/include/ --with-jpeg=/usr/include/ \
+    && apt-get install -y default-mysql-client postgresql-client \
+    && apt-get install -y libldap2-dev libzip-dev libxml2-dev libpq-dev libpng-dev libjpeg-dev \
+    && docker-php-ext-configure gd --with-jpeg=/usr/include/ \
     && docker-php-ext-configure pgsql -with-pgsql=/usr/local/pgsql \
     && docker-php-ext-install -j$(nproc) bcmath pdo_mysql pdo_pgsql pgsql ldap zip gd opcache soap \
     && pecl install xdebug-3.3.0 \
@@ -84,8 +83,8 @@ COPY --chown=www-data:www-data ./ /var/www/html
 
 USER www-data
 # Run npm and composer install as www-data user
-RUN npm install
-RUN composer install
+RUN npm install --production
+RUN composer install --no-dev
 
 USER root
 
