--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,7 @@
         "php": "^8.1",
         "ext-curl": "*",
         "ext-json": "*",
+        "ext-simplexml": "*",
         "anlutro/l4-settings": "^1.0.0",
         "bensampo/laravel-enum": "^6.0",
         "directorytree/ldaprecord-laravel": "^3.0",
@@ -17,25 +18,23 @@
         "laravel/framework": "^10.0",
         "laravel/prompts": "^0.1.13",
         "laravel/sanctum": "^v3.2",
-        "laravel/tinker": "^2.0",
-        "laravel/ui": "^4.0",
         "littleredbutton/bigbluebutton-api-php": "^5.0.0",
-        "maatwebsite/excel": "^3.1"
+        "maatwebsite/excel": "^3.1",
+        "laravel/telescope": "^4.15",
+        "nunomaduro/collision": "^7.0",
+        "spatie/laravel-ignition": "^2.0",
+        "symfony/var-exporter": "^6.2",
+        "laravel/tinker": "^2.0"
     },
     "require-dev": {
-        "ext-simplexml": "*",
         "barryvdh/laravel-ide-helper": "^2.7",
         "brianium/paratest": "^7.0",
         "fakerphp/faker": "^1.9.1",
         "friendsofphp/php-cs-fixer": "3.*",
-        "laravel/telescope": "^4.15",
         "mockery/mockery": "^1.4.2",
-        "nunomaduro/collision": "^7.0",
         "php-coveralls/php-coveralls": "^2.3.0",
         "phpunit/phpunit": "^10.0",
-        "spatie/laravel-ignition": "^2.0",
         "squizlabs/php_codesniffer": "3.*",
-        "symfony/var-exporter": "^6.2",
         "timacdonald/log-fake": "^2.0.1"
     },
     "config": {
