--- a/composer.json
+++ b/composer.json
@@ -18,13 +18,14 @@
         "laravel/framework": "^10.0",
         "laravel/prompts": "^0.1.13",
         "laravel/sanctum": "^v3.2",
+        "laravel/telescope": "^4.15",
+        "laravel/tinker": "^2.0",
+        "laravel/ui": "^4.3",
         "littleredbutton/bigbluebutton-api-php": "^5.0.0",
         "maatwebsite/excel": "^3.1",
-        "laravel/telescope": "^4.15",
         "nunomaduro/collision": "^7.0",
         "spatie/laravel-ignition": "^2.0",
-        "symfony/var-exporter": "^6.2",
-        "laravel/tinker": "^2.0"
+        "symfony/var-exporter": "^6.2"
     },
     "require-dev": {
         "barryvdh/laravel-ide-helper": "^2.7",
