--- a/package.json
+++ b/package.json
@@ -14,15 +14,9 @@
     "devDependencies": {
         "@intlify/eslint-plugin-vue-i18n": "^2.0.0",
         "@pinia/testing": "^0.1.3",
-        "@vitejs/plugin-vue2": "^2.3.1",
         "@vitest/coverage-istanbul": "^1.1.1",
         "@vitest/ui": "^1.1.1",
         "@vue/test-utils": "^1.3.6",
-        "axe-core": "^4.8.3",
-        "axios": "^1.6.3",
-        "axios-mock-adapter": "^1.22.0",
-        "bootstrap": "^4.6.1",
-        "canvas": "^2.10.2",
         "eslint": "^8.56.0",
         "eslint-config-standard": "^17.0.0",
         "eslint-plugin-import": "^2.29.1",
@@ -32,17 +26,7 @@
         "eslint-plugin-vitest-globals": "^1.4.0",
         "eslint-plugin-vue": "^9.19.2",
         "jsdom": "^23.0.1",
-        "laravel-vite-plugin": "^1.0.1",
-        "lodash": "^4.17.19",
-        "mutationobserver-shim": "^0.3.7",
-        "popper.js": "^1.12",
-        "resolve-url-loader": "^5.0.0",
-        "sass": "^1.69.6",
-        "vite": "^5.0.0",
-        "vitest": "^1.1.1",
-        "vue": "^2.7.16",
-        "vue-axe": "^2.4.4",
-        "vue-template-compiler": "^2.7.16"
+        "vitest": "^1.1.1"
     },
     "dependencies": {
         "@fortawesome/fontawesome-free": "^6.5.1",
@@ -55,21 +39,35 @@
         "@tiptap/extension-underline": "^2.1.13",
         "@tiptap/starter-kit": "^2.1.13",
         "@tiptap/vue-2": "^2.1.13",
+        "@vitejs/plugin-vue2": "^2.3.1",
+        "axe-core": "^4.8.3",
+        "axios": "^1.6.3",
+        "axios-mock-adapter": "^1.22.0",
+        "bootstrap": "^4.6.1",
         "bootstrap-vue": "^2.15.0",
         "chart.js": "^4.4.1",
         "chartjs-adapter-date-fns": "^3.0.0",
         "date-fns": "^3.0.6",
         "dompurify": "^3.0.6",
+        "laravel-vite-plugin": "^1.0.1",
+        "lodash": "^4.17.19",
         "maska": "^2.1.10",
         "mitt": "^3.0.1",
         "pinia": "^2.1.7",
+        "popper.js": "^1.12",
+        "resolve-url-loader": "^5.0.0",
+        "sass": "^1.69.6",
         "ua-parser-js": "^1.0.37",
+        "vite": "^5.0.0",
+        "vue": "^2.7.16",
+        "vue-axe": "^2.4.4",
         "vue-chartjs": "^5.3.0",
         "vue-cropperjs": "^4.2.0",
         "vue-frag": "^1.4.0",
         "vue-i18n": "^8.26.8",
         "vue-multiselect": "^2.1.8",
-        "vue-router": "^3.2.0"
+        "vue-router": "^3.2.0",
+        "vue-template-compiler": "^2.7.16"
     },
     "engines": {
         "node": "^10.12.0 || >=12.0.0"
