Change php-fpm socket name

--- a/docker/app/php/zz-docker.conf
+++ b/docker/app/php/zz-docker.conf
@@ -24,7 +24,7 @@ listen.backlog = 65536
 user = www-data
 group = www-data
 
-listen = /var/run/php8.1-fpm.sock
+listen = /var/run/php-fpm.sock
 listen.owner = www-data
 listen.group = www-data
 listen.mode = 0660
