--- a/docker/app/nginx/nginx.conf
+++ b/docker/app/nginx/nginx.conf
@@ -34,9 +34,18 @@ http {
         ##
 
         sendfile on;
+        tcp_nodelay on;
         tcp_nopush on;
+
+        client_body_timeout   10;
+        client_header_timeout 10;
+        keepalive_timeout     15;
+        send_timeout          10;
+
+
         types_hash_max_size 2048;
-        # server_tokens off;
+        
+        server_tokens off;
 
         # server_names_hash_bucket_size 64;
         # server_name_in_redirect off;
@@ -62,13 +71,10 @@ http {
         ##
 
         gzip on;
-
-        # gzip_vary on;
-        # gzip_proxied any;
-        # gzip_comp_level 6;
-        # gzip_buffers 16 8k;
-        # gzip_http_version 1.1;
-        # gzip_types text/plain text/css application/json application/javascript text/xml application/xml application/xml+rss text/javascript;
+        gzip_vary       on;
+        gzip_proxied    any;
+        gzip_comp_level 6;
+        gzip_types      text/plain text/css text/xml application/json application/javascript application/rss+xml application/atom+xml image/svg+xml;
 
         ##
         # Virtual Host Configs
