Automaticly set nginx worker connections and nofile limits

--- a/docker/app/nginx/nginx.conf
+++ b/docker/app/nginx/nginx.conf
@@ -1,16 +1,24 @@
 user www-data;
-worker_processes 8;
+
+# Set number of worker processes automatically based on number of CPU cores.
+worker_processes auto;
+
 pid /run/nginx.pid;
 include /etc/nginx/modules-enabled/*.conf;
 
-worker_rlimit_nofile 65535;
+# Maximum number of open files per worker process
+# Should be twice the number of worker connections due to reverse proxying
+# Is automaticlly set by entrypoint in production environments
+worker_rlimit_nofile 2000;
+
 events {
     #
     # Determines how many clients will be served by each worker process.
-    # (Max clients = worker_connections * worker_processes)
-    # Should be equal to `ulimit -n / worker_processes`
+    # (Max clients = worker connections * worker processes)
+    # Should be equal to `ulimit -n / worker processes`
+    # Is automaticlly set by entrypoint in production environments to the ulimit -n / num of processes (equals worker processes)
     #
-    worker_connections 8192;
+    worker_connections 500;
 
     #
     # Let each process accept multiple connections.
