--- a/docker/app/nginx/templates/nginx.template
+++ b/docker/app/nginx/templates/nginx.template
@@ -1,24 +1,21 @@
 user www-data;
 
 # Set number of worker processes automatically based on number of CPU cores.
-worker_processes auto;
+worker_processes ${NGINX_WORKER_PROCESSES};
 
 pid /run/nginx.pid;
 include /etc/nginx/modules-enabled/*.conf;
 
 # Maximum number of open files per worker process
 # Should be twice the number of worker connections due to reverse proxying
-# Is automaticlly set by entrypoint in production environments
-worker_rlimit_nofile 2000;
+worker_rlimit_nofile ${NGINX_WORKER_RLIMIT_NOFILE};
 
 events {
     #
     # Determines how many clients will be served by each worker process.
     # (Max clients = worker connections * worker processes)
-    # Should be equal to `ulimit -n / worker processes`
-    # Is automaticlly set by entrypoint in production environments to the ulimit -n / num of processes (equals worker processes)
-    #
-    worker_connections 500;
+    # Can be set in the .env file with NGINX_WORKER_CONNECTIONS
+    worker_connections ${NGINX_WORKER_CONNECTIONS};
 
     #
     # Let each process accept multiple connections.
@@ -52,7 +49,7 @@ http {
 
 
         types_hash_max_size 2048;
-        
+
         server_tokens off;
 
         # server_names_hash_bucket_size 64;
@@ -71,7 +68,7 @@ http {
         ##
         # Logging Settings
         ##
-        
+
         error_log /dev/stderr warn;
 
         ##
