--- a/docker/app/php/zz-docker.conf
+++ b/docker/app/php/zz-docker.conf
@@ -36,7 +36,8 @@ listen.mode = 0660
 pm = static
 
 ; The number of child processes to be created when pm is set to 'static'
-pm.max_children = 100
+; Can be changed using the environment variable PHP_FPM_PM_MAX_CHILDREN
+pm.max_children = ${PHP_FPM_PM_MAX_CHILDREN}
 
 pm.status_path = /status
 pm.status_listen = 81
