--- a/.env.example
+++ b/.env.example
@@ -173,7 +173,7 @@ NGINX_WORKER_PROCESSES=auto
 # Maximum number of simultaneous connections that can be opened by a worker process
 #
 # The special and default value of `auto` sets this
-# value to a quater of the NGINX_WORKER_RLIMIT_NOFILE limit.
+# value to a quarter of the NGINX_WORKER_RLIMIT_NOFILE limit.
 #
 # See http://nginx.org/en/docs/ngx_core_module.html#worker_connections
 NGINX_WORKER_CONNECTIONS=auto
