Reduce docker image size (#792)
* Switch to alpine linux

* Change php-fpm socket name

* Set nginx worker connections and nofile limits by env option

* Set php-fpm max_children by env option

* Fix frontend hash calculation

* Update changelog

--- a/docker/app/php/zz-docker.conf
+++ b/docker/app/php/zz-docker.conf
@@ -24,7 +24,7 @@ listen.backlog = 65536
 user = www-data
 group = www-data
 
-listen = /var/run/php8.1-fpm.sock
+listen = /var/run/php-fpm.sock
 listen.owner = www-data
 listen.group = www-data
 listen.mode = 0660
@@ -36,7 +36,8 @@ listen.mode = 0660
 pm = static
 
 ; The number of child processes to be created when pm is set to 'static'
-pm.max_children = 100
+; Can be changed using the environment variable PHP_FPM_PM_MAX_CHILDREN
+pm.max_children = ${PHP_FPM_PM_MAX_CHILDREN}
 
 pm.status_path = /status
 pm.status_listen = 81
