--- a/.env.example
+++ b/.env.example
@@ -160,6 +160,35 @@ TRUSTED_PROXIES=
 # Please consider supporting the product by keeping the link visible
 WHITELABEL=false
 
+# Number of child processes to be created by PHP-FPM
+PHP_FPM_PM_MAX_CHILDREN=100
+
+# Number of worker processes spawned by Nginx
+#
+# The default value of `auto` sets this to the number of CPU cores available.
+#
+# See http://nginx.org/en/docs/ngx_core_module.html#worker_processes
+NGINX_WORKER_PROCESSES=auto
+
+# Maximum number of simultaneous connections that can be opened by a worker process
+#
+# The special and default value of `auto` sets this
+# value to a quarter of the NGINX_WORKER_RLIMIT_NOFILE limit.
+#
+# See http://nginx.org/en/docs/ngx_core_module.html#worker_connections
+NGINX_WORKER_CONNECTIONS=auto
+
+# Limit on the maximum number of open files for worker processes.
+# Should be at least 2x worker_connections
+#
+# The special and default value of `auto` sets this
+# value to `ulimit -n` with the upper bound limited to
+# 16384 as a measure to protect against excess memory use,
+# and the lower bound of 1024 as a good default.
+#
+# See http://nginx.org/en/docs/ngx_core_module.html#worker_rlimit_nofile
+NGINX_WORKER_RLIMIT_NOFILE=auto
+
 # Development
 # Enable axe accessibility check tools
 VITE_ENABLE_AXE=false
