--- a/docker/app/nginx/templates/nginx.template
+++ b/docker/app/nginx/templates/nginx.template
@@ -1,16 +1,21 @@
 user www-data;
-worker_processes 8;
+
+# Set number of worker processes automatically based on number of CPU cores.
+worker_processes ${NGINX_WORKER_PROCESSES};
+
 pid /run/nginx.pid;
 include /etc/nginx/modules-enabled/*.conf;
 
-worker_rlimit_nofile 65535;
+# Maximum number of open files per worker process
+# Should be twice the number of worker connections due to reverse proxying
+worker_rlimit_nofile ${NGINX_WORKER_RLIMIT_NOFILE};
+
 events {
     #
     # Determines how many clients will be served by each worker process.
-    # (Max clients = worker_connections * worker_processes)
-    # Should be equal to `ulimit -n / worker_processes`
-    #
-    worker_connections 8192;
+    # (Max clients = worker connections * worker processes)
+    # Can be set in the .env file with NGINX_WORKER_CONNECTIONS
+    worker_connections ${NGINX_WORKER_CONNECTIONS};
 
     #
     # Let each process accept multiple connections.
@@ -34,9 +39,18 @@ http {
         ##
 
         sendfile on;
+        tcp_nodelay on;
         tcp_nopush on;
+
+        client_body_timeout   10;
+        client_header_timeout 10;
+        keepalive_timeout     15;
+        send_timeout          10;
+
+
         types_hash_max_size 2048;
-        # server_tokens off;
+
+        server_tokens off;
 
         # server_names_hash_bucket_size 64;
         # server_name_in_redirect off;
@@ -54,7 +68,7 @@ http {
         ##
         # Logging Settings
         ##
-        
+
         error_log /dev/stderr warn;
 
         ##
@@ -62,13 +76,10 @@ http {
         ##
 
         gzip on;
-
-        # gzip_vary on;
-        # gzip_proxied any;
-        # gzip_comp_level 6;
-        # gzip_buffers 16 8k;
-        # gzip_http_version 1.1;
-        # gzip_types text/plain text/css application/json application/javascript text/xml application/xml application/xml+rss text/javascript;
+        gzip_vary       on;
+        gzip_proxied    any;
+        gzip_comp_level 6;
+        gzip_types      text/plain text/css text/xml application/json application/javascript application/rss+xml application/atom+xml image/svg+xml;
 
         ##
         # Virtual Host Configs
