Change mounted volumes

--- a/docker-compose-complex.yml
+++ b/docker-compose-complex.yml
@@ -12,7 +12,7 @@ services:
           TRUSTED_PROXIES: "*"
           CONTAINER_ROLE: 'web'
         volumes:
-          - './storage/:/var/www/html/storage/'
+          - './storage/app:/var/www/html/storage/app'
           - './resources/custom:/var/www/html/resources/custom'
           - './resources/sass/theme/custom:/var/www/html/resources/sass/theme/custom'
           - './app/Auth/config:/var/www/html/app/Auth/config'
@@ -37,7 +37,7 @@ services:
           - .env
         entrypoint: ['pilos-cli', 'init']
         volumes:
-          - './storage/:/var/www/html/storage/'
+          - './storage/app:/var/www/html/storage/app'
           - './resources/custom:/var/www/html/resources/custom'
           - './resources/sass/theme/custom:/var/www/html/resources/sass/theme/custom'
           - './app/Auth/config:/var/www/html/app/Auth/config'
