Refactor health check

--- a/docker/app/php/zz-docker.conf
+++ b/docker/app/php/zz-docker.conf
@@ -42,6 +42,7 @@ pm.max_children = ${PHP_FPM_PM_MAX_CHILDREN}
 pm.status_path = /status
 pm.status_listen = 81
 
+ping.path = /ping
 
 access.log = /var/log/php/access.log
 ; Ensure worker stdout and stderr are sent to the main error log.
