--- a/docker-compose-complex.yml
+++ b/docker-compose-complex.yml
@@ -24,7 +24,7 @@ services:
           net.ipv4.tcp_tw_reuse: 1
           net.ipv4.tcp_fin_timeout: 30
         healthcheck:
-          test: curl --fail http://localhost/health || exit 1
+          test: curl --fail http://localhost/ping || exit 1
           interval: 10s
           retries: 6
           timeout: 5s
