--- a/docker/app/supervisord/horizon.conf
+++ b/docker/app/supervisord/horizon.conf
@@ -4,6 +4,7 @@ command=php /var/www/html/artisan horizon
 autostart=true
 autorestart=true
 user=www-data
-redirect_stderr=true
-stdout_logfile=/var/www/html/storage/logs/horizon.log
-stopwaitsecs=3600
+stdout_logfile=/dev/stdout
+stdout_logfile_maxbytes=0
+stderr_logfile=/dev/stderr
+stderr_logfile_maxbytes=0
