--- a/docker-compose-dev.yml
+++ b/docker-compose-dev.yml
@@ -18,7 +18,7 @@ services:
           - '${VITE_PORT:-1073}:${VITE_PORT:-1073}'
           - '${VITEST_UI_PORT:-1074}:${VITEST_UI_PORT:-1074}'
         environment:
-          DEV_MODE: 'yes'
+          DEV_MODE: 'true'
           ENABLE_XDEBUG: '${ENABLE_XDEBUG:-no}'
           PHP_FPM_PM_MAX_CHILDREN: '${PHP_FPM_PM_MAX_CHILDREN:-100}'
           NGINX_WORKER_PROCESSES: '${NGINX_WORKER_PROCESSES:-auto}'
