Add group for tiptap dependencies

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -10,6 +10,10 @@ updates:
     directory: "/"
     schedule:
       interval: "daily"
+    groups:
+      tiptap:
+        patterns:
+        - "@tiptap*"
 
   # Maintain dependencies for Composer
   - package-ecosystem: "composer"
