Fix missing volumes

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,20 +1,23 @@
 # For more information: https://laravel.com/docs/sail
 version: '3'
+
+x-docker-pilos-volumes: &pilos-volumes
+  volumes:
+    - './storage/app:/var/www/html/storage/app'
+    - './resources/custom:/var/www/html/resources/custom'
+    - './resources/sass/theme/custom:/var/www/html/resources/sass/theme/custom'
+    - './app/Auth/config:/var/www/html/app/Auth/config'
+    - './public/images/custom:/var/www/html/public/images/custom'
+    - './public/build:/var/www/html/public/build'
+
 services:
     app:
         image: '${CONTAINER_IMAGE:-pilos/pilos:latest}'
         ports:
           - '127.0.0.1:5000:80'
           - '127.0.0.1:9000:81'
-        env_file:
-          - .env
-        volumes:
-          - './storage/app:/var/www/html/storage/app'
-          - './resources/custom:/var/www/html/resources/custom'
-          - './resources/sass/theme/custom:/var/www/html/resources/sass/theme/custom'
-          - './app/Auth/config:/var/www/html/app/Auth/config'
-          - './public/images/custom:/var/www/html/public/images/custom'
-          - './public/build:/var/www/html/public/build'
+        env_file: .env
+        <<: *pilos-volumes
         sysctls:
           net.core.somaxconn: 65536
           net.ipv4.ip_local_port_range: "2000 65535"
@@ -32,16 +35,16 @@ services:
             condition: service_healthy
     cron:
         image: '${CONTAINER_IMAGE:-pilos/pilos:latest}'
-        env_file:
-          - .env
+        env_file: .env
+        <<: *pilos-volumes  
         entrypoint: ['/usr/sbin/crond','-f']
         depends_on:
           app:
             condition: service_healthy
     horizon:
         image: '${CONTAINER_IMAGE:-pilos/pilos:latest}'
-        env_file:
-          - .env
+        env_file: .env
+        <<: *pilos-volumes 
         entrypoint: ['pilos-cli', 'horizon']
         depends_on:
           app:
