Multi-server setup (#617)
* Add redis

* Run scheduler only on one server

* Add / Update docs

* Add Laravel Horizon

* Refactor notifications to use queue

* Build server usage using queue

* Move scheduler and horizon to dedicated container

* Refactor container

* Remove trusted proxies wildcard for prod containers

* Add policy for telescope and horizon, add menu options

* Add laravel pulse

* Change default cache und queue

* Update CHANGELOG.md

--- a/.env.example
+++ b/.env.example
@@ -5,6 +5,8 @@ APP_DEBUG=false
 # API Server URL
 APP_URL=http://localhost
 
+CONTAINER_IMAGE=pilos/pilos:latest
+
 SESSION_LIFETIME=120
 
 # Log to docker logs
@@ -21,8 +23,8 @@ DB_DATABASE=app
 DB_USERNAME=user
 DB_PASSWORD=password
 
-CACHE_DRIVER=file
-QUEUE_CONNECTION=sync
+# Redis config (see config/database.php for more options)
+REDIS_HOST=redis
 
 # Email config
 MAIL_MAILER=smtp
