--- a/docker-compose-dev.yml
+++ b/docker-compose-dev.yml
@@ -1,28 +1,57 @@
 # For more information: https://laravel.com/docs/sail
 version: '3'
+
+x-docker-build-data: &app-image
+  image: 'pilos/pilos:local-dev'
+  build:
+    context: ./
+    dockerfile: docker/app/Dockerfile
+    args:
+      WWWGROUP: '${WWWGROUP}'
+      WWWUSER: '${WWWUSER}'
 services:
     app:
-        build:
-            context: ./
-            dockerfile: docker/app/Dockerfile
-            args:
-              WWWGROUP: '${WWWGROUP}'
-              WWWUSER: '${WWWUSER}'
+        <<: *app-image
         ports:
           - '${APP_PORT:-80}:80'
           - '${APP_SSL_PORT:-443}:443'
           - '${VITE_PORT:-1073}:${VITE_PORT:-1073}'
           - '${VITEST_UI_PORT:-1074}:${VITEST_UI_PORT:-1074}'
         environment:
+          DEV_MODE: 'true'
           ENABLE_XDEBUG: '${ENABLE_XDEBUG:-no}'
           PHP_FPM_PM_MAX_CHILDREN: '${PHP_FPM_PM_MAX_CHILDREN:-100}'
           NGINX_WORKER_PROCESSES: '${NGINX_WORKER_PROCESSES:-auto}'
           TRUSTED_PROXIES: "*"
+        healthcheck:
+          test: curl --fail http://localhost/ping || exit 1
+          interval: 10s
+          retries: 6
+          timeout: 5s
         volumes:
           - './:/var/www/html/'
           - './ssl:/local/certs/'
         depends_on:
-          - db
+          db:
+            condition: service_healthy
+          redis:
+            condition: service_healthy
+    cron:
+      <<: *app-image
+      env_file:
+        - .env
+      entrypoint: [ '/usr/sbin/crond','-f' ]
+      depends_on:
+        app:
+          condition: service_healthy
+    horizon:
+      <<: *app-image
+      env_file:
+        - .env
+      entrypoint: [ 'pilos-cli', 'horizon' ]
+      depends_on:
+        app:
+          condition: service_healthy
     db:
       image: 'mariadb:10'
       environment:
@@ -37,7 +66,18 @@ services:
         - './tests/Utils/create-mysql-testing-database.sh:/docker-entrypoint-initdb.d/10-create-testing-database.sh'
       healthcheck:
         test: [ "CMD", "mysqladmin", "ping", "-u${DB_USERNAME}", "-p${DB_PASSWORD}" ]
-        retries: 3
+        interval: 5s
+        retries: 12
+        timeout: 5s
+    redis:
+      image: redis:7.2-alpine3.18
+      restart: unless-stopped
+      volumes:
+        - redis:/data
+      healthcheck:
+        test: ["CMD-SHELL", "redis-cli ping | grep PONG"]
+        interval: 5s
+        retries: 12
         timeout: 5s
     mailhog:
       image: 'mailhog/mailhog:latest'
@@ -73,4 +113,6 @@ services:
         PHPLDAPADMIN_HTTPS: 'false'
 volumes:
   mariadb:
+    driver: local
+  redis:
     driver: local
