--- a/docker/app/supervisord/supervisord.conf
+++ b/docker/app/supervisord/supervisord.conf
@@ -4,17 +4,6 @@ user=root
 logfile=/var/log/supervisor/supervisord.log
 pidfile=/var/run/supervisord.pid
 
-[program:php]
-command=/usr/local/sbin/php-fpm --nodaemonize
-user=root
-autostart=true
-autorestart=true
-priority=5
-stdout_logfile=/dev/stdout
-stdout_logfile_maxbytes=0
-stderr_logfile=/dev/stderr
-stderr_logfile_maxbytes=0
-
 [program:nginx]
 command=/usr/sbin/nginx -g "daemon off;"
 user=root
@@ -28,11 +17,32 @@ stdout_logfile_maxbytes=0
 stderr_logfile=/dev/stderr
 stderr_logfile_maxbytes=0
 
-[program:schedule]
-command=/usr/local/etc/scheduler/run.sh
-user=www-data
+[program:php-fpm]
+command=/usr/local/sbin/php-fpm --nodaemonize
+user=root
 autostart=true
-startsecs=1
+autorestart=true
+priority=5
+stdout_logfile=/dev/stdout
+stdout_logfile_maxbytes=0
+stderr_logfile=/dev/stderr
+stderr_logfile_maxbytes=0
+
+[program:pulse-check]
+command=php /var/www/html/artisan pulse:check
+autostart=true
+autorestart=true
+user=www-data
+stdout_logfile=/dev/stdout
+stdout_logfile_maxbytes=0
+stderr_logfile=/dev/stderr
+stderr_logfile_maxbytes=0
+
+[program:pulse-work]
+command=php /var/www/html/artisan pulse:work
+autostart=true
+autorestart=true
+user=www-data
 stdout_logfile=/dev/stdout
 stdout_logfile_maxbytes=0
 stderr_logfile=/dev/stderr
