--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -6,8 +6,7 @@
      "vitest-globals/env":true
   },
   "extends":[
-     "plugin:vue/essential",
-     // "plugin:vue/recommended",
+      "plugin:vue/vue3-essential",
      "standard",
      "plugin:jsonc/base",
      "plugin:vitest-globals/recommended"
