--- a/package.json
+++ b/package.json
@@ -16,7 +16,6 @@
         "@pinia/testing": "^0.1.3",
         "@vitest/coverage-istanbul": "^1.1.3",
         "@vitest/ui": "^1.1.3",
-        "@vue/test-utils": "^1.3.6",
         "eslint": "^8.56.0",
         "eslint-config-standard": "^17.0.0",
         "eslint-plugin-import": "^2.29.1",
@@ -38,13 +37,14 @@
         "@tiptap/extension-text-style": "^2.1.15",
         "@tiptap/extension-underline": "^2.1.15",
         "@tiptap/starter-kit": "^2.1.15",
-        "@tiptap/vue-2": "^2.1.15",
-        "@vitejs/plugin-vue2": "^2.3.1",
+        "@tiptap/vue-3": "^2.1.15",
+        "@vitejs/plugin-vue": "^4.4.1",
         "axe-core": "^4.8.3",
         "axios": "^1.6.5",
         "axios-mock-adapter": "^1.22.0",
         "bootstrap": "^4.6.1",
-        "bootstrap-vue": "^2.15.0",
+        "@vue/compat": "3.3.4",
+        "bootstrap-vue": "^2.23.0",
         "chart.js": "^4.4.1",
         "chartjs-adapter-date-fns": "^3.0.0",
         "date-fns": "^3.2.0",
@@ -59,15 +59,13 @@
         "sass": "^1.69.7",
         "ua-parser-js": "^1.0.37",
         "vite": "^5.0.11",
-        "vue": "^2.7.16",
-        "vue-axe": "^2.4.4",
+        "vue": "3.3.4",
         "vue-chartjs": "^5.3.0",
-        "vue-cropperjs": "^4.2.0",
-        "vue-frag": "^1.4.0",
-        "vue-i18n": "^8.26.8",
-        "vue-multiselect": "^2.1.8",
-        "vue-router": "^3.2.0",
-        "vue-template-compiler": "^2.7.16"
+        "vue-cropperjs": "^5.0.0",
+        "vue-i18n": "^9.0",
+        "vue-multiselect": "^3.0.0-beta.3",
+        "vue-router": "^4.2.5",
+        "vue-axe": "^3.1.2"
     },
     "engines": {
         "node": "^10.12.0 || >=12.0.0"
