--- a/package.json
+++ b/package.json
@@ -42,9 +42,6 @@
         "axe-core": "^4.8.3",
         "axios": "^1.6.5",
         "axios-mock-adapter": "^1.22.0",
-        "bootstrap": "^4.6.1",
-        "@vue/compat": "3.3.4",
-        "bootstrap-vue": "^2.23.0",
         "chart.js": "^4.4.1",
         "chartjs-adapter-date-fns": "^3.0.0",
         "date-fns": "^3.2.0",
@@ -55,17 +52,21 @@
         "mitt": "^3.0.1",
         "pinia": "^2.1.7",
         "popper.js": "^1.12",
+        "primeflex": "^3.3.1",
+        "primevue": "^3.46.0",
+        "primevue-sass-theme": "primefaces/primevue-sass-theme#semver:^3.46.0",
         "resolve-url-loader": "^5.0.0",
         "sass": "^1.69.7",
         "ua-parser-js": "^1.0.37",
+        "unplugin-vue-components": "^0.26.0",
         "vite": "^5.0.11",
         "vue": "3.3.4",
+        "vue-axe": "^3.1.2",
         "vue-chartjs": "^5.3.0",
         "vue-cropperjs": "^5.0.0",
         "vue-i18n": "^9.0",
         "vue-multiselect": "^3.0.0-beta.3",
-        "vue-router": "^4.2.5",
-        "vue-axe": "^3.1.2"
+        "vue-router": "^4.2.5"
     },
     "engines": {
         "node": "^10.12.0 || >=12.0.0"
