Refactor room overview page and sub-components

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -74,13 +74,7 @@
         }
      ],
      "vue/custom-event-name-casing":[
-        "error",
-        "kebab-case",
-        {
-           "ignores":[
-              "/^bv::.*$/u"
-           ]
-        }
+        "error"
      ]
   },
   "settings":{
