--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
         "vitest": "^1.1.3"
     },
     "dependencies": {
+        "@floating-ui/vue": "^1.0.4",
         "@fortawesome/fontawesome-free": "^6.5.1",
         "@tiptap/extension-color": "^2.1.15",
         "@tiptap/extension-highlight": "^2.1.15",
@@ -39,6 +40,8 @@
         "@tiptap/starter-kit": "^2.1.15",
         "@tiptap/vue-3": "^2.1.15",
         "@vitejs/plugin-vue": "^4.4.1",
+        "@vueuse/components": "^10.7.2",
+        "@vueuse/core": "^10.7.2",
         "axe-core": "^4.8.3",
         "axios": "^1.6.5",
         "axios-mock-adapter": "^1.22.0",
