Revert "Add e2e example tests  / add laracasts/cypress"
This reverts commit da25d13c9b513af8832c500dfcc99f08ec75c16f.

# Conflicts:
#	cypress.config.js
#	cypress/e2e/example.cy.js
#	cypress/e2e/exampleGeneral.cy.js
#	cypress/support/commands.js

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
         "test": "vitest run",
         "test:watch": "vitest watch",
         "test:ui": "vitest --ui",
-        "cover": "vitest run --coverage",
+        "cover": "vitest run --coverage"
     },
     "devDependencies": {
         "@intlify/eslint-plugin-vue-i18n": "^2.0.0",
