--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
         "laravel-vite-plugin": "^1.0.1",
         "lodash": "^4.17.19",
         "mitt": "^3.0.1",
+        "modern-normalize": "^2.0.0",
         "pinia": "^2.1.7",
         "popper.js": "^1.12",
         "primeflex": "^3.3.1",
