--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
         "ext-curl": "*",
         "ext-json": "*",
         "ext-simplexml": "*",
+        "ext-zip": "*",
         "anlutro/l4-settings": "^1.0.0",
         "bensampo/laravel-enum": "^6.0",
         "directorytree/ldaprecord-laravel": "^3.0",
@@ -27,6 +28,7 @@
         "maatwebsite/excel": "^3.1",
         "nunomaduro/collision": "^7.0",
         "spatie/laravel-ignition": "^2.0",
+        "spatie/temporary-directory": "*",
         "symfony/var-exporter": "^6.2"
     },
     "require-dev": {
