--- a/docker-compose-dev.yml
+++ b/docker-compose-dev.yml
@@ -23,6 +23,7 @@ services:
           PHP_FPM_PM_MAX_CHILDREN: '${PHP_FPM_PM_MAX_CHILDREN:-100}'
           NGINX_WORKER_PROCESSES: '${NGINX_WORKER_PROCESSES:-auto}'
           TRUSTED_PROXIES: "*"
+          PILOS_SPOOL_GID: 5000
         healthcheck:
           test: curl --fail http://localhost/ping || exit 1
           interval: 10s
@@ -38,8 +39,6 @@ services:
             condition: service_healthy
     cron:
       <<: *app-image
-      env_file:
-        - .env
       entrypoint: [ '/usr/sbin/crond','-f' ]
       volumes:
         - './:/var/www/html/'
@@ -48,8 +47,6 @@ services:
           condition: service_healthy
     horizon:
       <<: *app-image
-      env_file:
-        - .env
       entrypoint: [ 'pilos-cli', 'horizon' ]
       volumes:
         - './:/var/www/html/'
