--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
         "axios-mock-adapter": "^1.22.0",
         "chart.js": "^4.4.1",
         "chartjs-adapter-date-fns": "^3.0.0",
+        "cropperjs": "^1.6.1",
         "date-fns": "^3.2.0",
         "dompurify": "^3.0.8",
         "laravel-vite-plugin": "^1.0.1",
@@ -56,14 +57,14 @@
         "pinia": "^2.1.7",
         "popper.js": "^1.12",
         "primeflex": "^3.3.1",
-        "primevue": "^3.47.2",
-        "primevue-sass-theme": "primefaces/primevue-sass-theme#semver:^3.47.2",
+        "primevue": "^3.48.1",
+        "primevue-sass-theme": "primefaces/primevue-sass-theme#semver:^3.48.1",
         "resolve-url-loader": "^5.0.0",
         "sass": "^1.69.7",
         "ua-parser-js": "^1.0.37",
         "unplugin-vue-components": "^0.26.0",
         "vite": "^5.0.11",
-        "vue": "3.3.4",
+        "vue": "^3.4",
         "vue-axe": "^3.1.2",
         "vue-chartjs": "^5.3.0",
         "vue-cropperjs": "^5.0.0",
