--- a/composer.json
+++ b/composer.json
@@ -26,6 +26,7 @@
         "laravel/ui": "^4.3",
         "littleredbutton/bigbluebutton-api-php": "^5.3.0",
         "maatwebsite/excel": "^3.1",
+        "maennchen/zipstream-php": "^3.1",
         "nunomaduro/collision": "^7.0",
         "spatie/laravel-ignition": "^2.0",
         "symfony/var-exporter": "^6.2"
