--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -14,6 +14,9 @@ updates:
       tiptap:
         patterns:
         - "@tiptap*"
+      primevue:
+        patterns:
+        - "primevue*"  
 
   # Maintain dependencies for Composer
   - package-ecosystem: "composer"
