--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,6 @@
         "ext-curl": "*",
         "ext-json": "*",
         "ext-simplexml": "*",
-        "anlutro/l4-settings": "^1.0.0",
         "directorytree/ldaprecord-laravel": "^3.0",
         "guzzlehttp/guzzle": "^7.0.1",
         "laravel/framework": "^11.0",
@@ -24,6 +23,7 @@
         "maatwebsite/excel": "^3.1",
         "nunomaduro/collision": "^8.1",
         "spatie/laravel-ignition": "^2.0",
+        "spatie/laravel-settings": "^3.3",
         "symfony/var-exporter": "^7.0"
     },
     "require-dev": {
