Cleanup .env files

--- a/.env.example
+++ b/.env.example
@@ -5,9 +5,14 @@ APP_DEBUG=false
 # API Server URL
 APP_URL=http://localhost
 
+# Trusted proxies for reverse proxy setups
+# You can use "*" to trust all proxies that connect directly to the server
+# or you can use a comma separated list of trusted proxies, also with support for CIDR notation e.g. "192.0.0.1,10.0.0.0/8"
+#TRUSTED_PROXIES=
+
 CONTAINER_IMAGE=pilos/pilos:latest
 
-SESSION_LIFETIME=120
+#SESSION_LIFETIME=120
 
 # Log to docker logs
 # If logging to file is needed change to 'stack' or 'daily' and mount the log directory ('storage/logs') to the host
@@ -40,16 +45,16 @@ MAIL_FROM_NAME="${APP_NAME}"
 #LOCAL_AUTH_ENABLED=true
 
 # LDAP config
-LDAP_ENABLED=false
-LDAP_HOST=openldap
+#LDAP_ENABLED=false
+#LDAP_HOST=openldap
 # For anonymous bind keep LDAP_USERNAME and LDAP_PASSWORD empty
-LDAP_USERNAME="cn=readonly,dc=university,dc=org"
-LDAP_PASSWORD="readonly"
-LDAP_PORT=389
-LDAP_BASE_DN="ou=people,dc=university,dc=org"
-LDAP_TIMEOUT=5
-LDAP_SSL=false
-LDAP_TLS=false
+#LDAP_USERNAME="cn=readonly,dc=university,dc=org"
+#LDAP_PASSWORD="readonly"
+#LDAP_PORT=389
+#LDAP_BASE_DN="ou=people,dc=university,dc=org"
+#LDAP_TIMEOUT=5
+#LDAP_SSL=false
+#LDAP_TLS=false
 
 # Query the users attributes using the users own credentials
 #LDAP_LOAD_ATTRIBUTES_AS_USER=false
@@ -67,7 +72,7 @@ LDAP_TLS=false
 #LDAP_LOGIN_ATTRIBUTE=uid
 
 # LDAP logging debugging only
-LDAP_LOGGING=false
+#LDAP_LOGGING=true
 
 # Enable Shibboleth authentication
 #SHIBBOLETH_ENABLED=false
@@ -78,20 +83,20 @@ LDAP_LOGGING=false
 #ENABLED_LOCALES=de,en
 
 # Default locale
-DEFAULT_LOCALE=en
+#DEFAULT_LOCALE=en
 
 # Don't forget to rebuild frontend on changing any environment variables starting with VITE_
 
 # Theme (resources/sass/theme/)
-VITE_THEME=default
+#VITE_THEME=default
 # Color of the room history chart
-VITE_HISTORY_PARTICIPANT_COLOR='#c0392b'
-VITE_HISTORY_VOICES_COLOR='#2980b9'
-VITE_HISTORY_VIDEOS_COLOR='#27ae60'
+#VITE_HISTORY_PARTICIPANT_COLOR='#c0392b'
+#VITE_HISTORY_VOICES_COLOR='#2980b9'
+#VITE_HISTORY_VIDEOS_COLOR='#27ae60'
 # Colors for color pickers (room type and application banner)
-VITE_ROOM_TYPE_COLORS='["#16a085", "#27ae60", "#2980b9", "#8e44ad", "#f39c12", "#d35400", "#c0392b", "#2c3e50"]'
-VITE_BANNER_BACKGROUND_COLORS='["#16a085", "#27ae60", "#2980b9", "#8e44ad", "#f39c12", "#d35400", "#c0392b", "#2c3e50"]'
-VITE_BANNER_TEXT_COLORS='["#ffffff", "#000000"]'
+#VITE_ROOM_TYPE_COLORS='["#16a085", "#27ae60", "#2980b9", "#8e44ad", "#f39c12", "#d35400", "#c0392b", "#2c3e50"]'
+#VITE_BANNER_BACKGROUND_COLORS='["#16a085", "#27ae60", "#2980b9", "#8e44ad", "#f39c12", "#d35400", "#c0392b", "#2c3e50"]'
+#VITE_BANNER_TEXT_COLORS='["#ffffff", "#000000"]'
 
 # Maximum length of the room welcome message
 #WELCOME_MESSAGE_LIMIT=500
@@ -118,15 +123,9 @@ VITE_BANNER_TEXT_COLORS='["#ffffff", "#000000"]'
 #NEW_USER_PASSWORD_RESET_EXPIRE=60
 #NEW_USER_PASSWORD_RESET_THROTTLE=60
 
-
 # Support greenlight urls: room urls, signin, ldap_signin and default_room, see MIGRATE_GREENLIGHT.md for more details
 #GREENLIGHT_COMPATIBILITY=false
 #GREENLIGHT_PATH=b
-
-# Trusted proxies for reverse proxy setups
-# You can use "*" to trust all proxies that connect directly to the server
-# or you can use a comma separated list of trusted proxies, also with support for CIDR notation e.g. "192.0.0.1,10.0.0.0/8"
-#TRUSTED_PROXIES=
 
 # Hide link to product in footer
 # Please consider supporting the product by keeping the link visible
