--- a/.env.ci
+++ b/.env.ci
@@ -22,10 +22,10 @@ LOG_LEVEL=debug
 
 # Database config
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
+DB_HOST=db
 DB_PORT=3306
-DB_DATABASE=test
-DB_USERNAME=root
+DB_DATABASE=app
+DB_USERNAME=user
 DB_PASSWORD=password
 
 # Redis config (see config/database.php for more options)
