--- a/.env.example
+++ b/.env.example
@@ -201,5 +201,5 @@ VITEST_UI_PORT=1074
 # User ID and Group ID of the www-data user inside the container
 # This is needed to avoid permission issues when mounting volumes in development
 # Only takes effect when building the container (sail build)
-WWWGROUP=1000
-WWWUSER=1000
+#WWWGROUP=1000
+#WWWUSER=1000
