--- a/docker-compose-dev.yml
+++ b/docker-compose-dev.yml
@@ -15,6 +15,7 @@ services:
         ports:
           - '${APP_PORT:-80}:80'
           - '${APP_SSL_PORT:-443}:443'
+          - '${DOCS_PORT:-3000}:3000'
           - '${VITE_PORT:-1073}:${VITE_PORT:-1073}'
           - '${VITEST_UI_PORT:-1074}:${VITEST_UI_PORT:-1074}'
         environment:
