--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
         "test": "vitest run",
         "test:watch": "vitest watch",
         "test:ui": "vitest --ui",
-        "cover": "vitest run --coverage"
+        "cover": "vitest run --coverage",
+        "docs:dev": "cd docs && npm run start -- --host 0.0.0.0"
     },
     "devDependencies": {
         "@intlify/eslint-plugin-vue-i18n": "^2.0.0",
