--- a/.env.ci
+++ b/.env.ci
@@ -16,7 +16,7 @@ LOG_CHANNEL=stack
 LOG_LEVEL=debug
 
 # Database config
-DB_CONNECTION=mysql
+DB_CONNECTION=mariadb
 DB_HOST=127.0.0.1
 DB_PORT=3306
 DB_DATABASE=test
@@ -28,7 +28,7 @@ QUEUE_CONNECTION=sync
 
 # Email config
 MAIL_MAILER=smtp
-MAIL_HOST=mailhog
+MAIL_HOST=mailpit
 MAIL_PORT=1025
 MAIL_USERNAME=null
 MAIL_PASSWORD=null
