--- a/.github/workflows/pull-locales.yml
+++ b/.github/workflows/pull-locales.yml
@@ -9,7 +9,7 @@ jobs:
 
     services:
       mariadb:
-        image: mariadb:10
+        image: mariadb:11
         ports:
           - 3306
         env:
@@ -17,7 +17,7 @@ jobs:
           MYSQL_PASSWORD: password
           MYSQL_DATABASE: test
           MYSQL_ROOT_PASSWORD: password
-        options: --health-cmd="mysqladmin ping" --health-interval=5s --health-timeout=2s --health-retries=3
+        options: --health-cmd="healthcheck.sh --connect --innodb_initialized" --health-interval=5s --health-timeout=2s --health-retries=3
 
     steps:
     - name: Checkout
